Added authors and contributors section

--- a/README
+++ b/README
@@ -60,6 +60,13 @@ can generate the script tags for that file:
       end
     end
 
+== Author
+Min Huang <min.huang@alumni.usc.edu>
+
+== Contributors
+Pete Elmore <pete@debu.gs>
+Ryan Wolf <ryan@borderstylo.com>
+
 == License
 The following is retained from BorderStylo's licensing terms:
 
