Appease rdoc deities

--- a/README.rdoc
+++ b/README.rdoc
@@ -64,8 +64,7 @@ can generate the script tags for that file:
 Min Huang <min.huang@alumni.usc.edu>
 
 == Contributors
-Pete Elmore <pete@debu.gs>
-Ryan Wolf <ryan@borderstylo.com>
+Pete Elmore <pete@debu.gs>, Ryan Wolf <ryan@borderstylo.com>
 
 == License
 The following is retained from BorderStylo's licensing terms:
